--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,3 @@
-import 'solidity-coverage';
-
 {
   "compilerOptions": {
     "target": "es2020",
@@ -8,5 +6,8 @@ import 'solidity-coverage';
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
-  }
+  },
+  "exclude": ["dist", "node_modules"],
+  "include": ["./test/contracts/*", "./test/*", "./src", "./scripts"],
+  "files": ["./hardhat.config.ts"]
 }
